rregullimi i adresave dhe ndrryshimi i kontakt formes ne home

--- a/about-cattery.html
+++ b/about-cattery.html
@@ -152,8 +152,8 @@ Long term stay - please enquire for rates.</p>
     <!-- Contact Section -->
     <section class="contact-section2">
         <div class="container">
-            <div class="row">
-               <div class="col-md-12 col-xs-12" style="padding-bottom: 20px;">
+            <div class="row">   
+            <div class="col-md-6 col-xs-12" style="padding-bottom: 20px;">
                    <h1>Contact Info</h1>
                     <img src="img/3points.svg" style="width:50px">
                     <h4>PO Box 6273 Ajman</h4>
@@ -161,12 +161,22 @@ Long term stay - please enquire for rates.</p>
                     <p>Office: 050 2730973</p>
                     <p>poshpawsdubai@yahoo.co.uk</p>
                </div>
+               <div class="col-md-6 col-xs-12" style="padding-bottom: 20px;">
+                   <h1>Contact Info</h1>
+                    <img src="img/3points.svg" style="width:50px">
+                    <h4>Warehouse no2 & 3 Street 37 Dubai</h4>
+                    <p>Opening Hours 9am – 5pm</p>
+                    <p>Office: 050 2730973</p>
+                    <p>poshpawsdubai@yahoo.co.uk</p>
+               </div>           
+               <div class="clearfix"></div> 
                <div class="col-md-6 display-none">
                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3211.6019840340427!2d55.591752669722986!3d25.374623633636777!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x985de2b55604ecb!2sPosh+Paws+Kennels+and+Cattery!5e0!3m2!1sen!2s!4v1479141215356" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                </div>
                <div class="col-md-6 display-none">
-                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3616.5086621473547!2d55.14875891500523!3d24.98282618399629!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDU4JzU4LjIiTiA1NcKwMDknMDMuNCJF!5e0!3m2!1sen!2s!4v1479141309033" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3616.5086621473547!2d55.14875891500523!3d24.98282618399629!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDU4JzU4LjIiTiA1NcKwMDknMDMuNCJF!5e0!3m2!1sen!2s!4v1479142507239" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                </div>
+
                <div class="col-xs-12 socialmedia-footer0">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
                 <i class="fa fa-twitter" aria-hidden="true"></i>
