--- a/about.html
+++ b/about.html
@@ -157,17 +157,18 @@ None of my staff are employed for their looks or language skills!, but for their
     </section>
 
 
-    <!-- Contact Section Maps-->
+    <!-- Contact Section -->
     <section class="contact-section2">
         <div class="container">
             <div class="row">
                <div class="col-md-6 display-none">
                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3616.5086621473547!2d55.14875891500523!3d24.98282618399629!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDU4JzU4LjIiTiA1NcKwMDknMDMuNCJF!5e0!3m2!1sen!2s!4v1479142507239" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
                </div>
                <div class="col-md-6 col-xs-12">
                    <h1>Contact Info</h1>
                     <img src="img/3points.svg" class="points3">
-                    <h4>PO Box 6273 Ajman</h4>
+                    <h4>Warehouse no2 & 3 Street 37 Dubai</h4>
                     <p>Opening Hours 9am – 5pm</p>
                     <p>Office: 050 2730973</p>
                     <p>poshpawsdubai@yahoo.co.uk</p>
