--- a/farm.html
+++ b/farm.html
@@ -243,24 +243,50 @@ Stables, Al Khawaneej 2, Dubai</h1>
             </div>
         </div>
     </section>
+
+
         <!-- Contact Section -->
-    <section class="contact-section2">
+    <section class="contact-section2" style="
+    padding-top: 70px;
+    padding-bottom: 70px;
+    text-align: center;
+    background: white;
+    background-repeat: no-repeat;
+    -webkit-background-size:cover;
+    -moz-background-size:cover;
+    -o-background-size:cover;
+    background-size:cover;
+    background-position:center;">
         <div class="container">
             <div class="row">
                <div class="col-md-6 desktop-d-n">
-                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3609.813906950584!2d55.523625415009725!3d25.209497483890463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjXCsDEyJzM0LjIiTiA1NcKwMzEnMzIuOSJF!5e0!3m2!1sen!2s!4v1479142461435" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3609.813906950584!2d55.523625415009725!3d25.209497483890463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjXCsDEyJzM0LjIiTiA1NcKwMzEnMzIuOSJF!5e0!3m2!1sen!2s!4v1479142461435" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                </div>
                <div class="col-md-6 col-xs-12">
-                   <h1>Contact Info</h1>
+                   <h1 style=" 
+                    font-family: 'GrandHotel-Regular';
+                    color: #a5ceee;
+                    font-size: 70px;">Contact Info</h1>
                     <img src="img/3points.svg" style="width:50px">
-                    <h4>PO Box 6273 Ajman</h4>
-                    <p>Opening Hours 9am – 5pm</p>
-                    <p>Office: 050 2730973</p>
-                    <p>poshpawsdubai@yahoo.co.uk</p>
+                    <h4 style="
+                    font-family: 'GrandHotel-Regular';
+                    color: #a5ceee;
+                    font-size: 30px;">Al Hamra Stables, Al Khawaneej 2, Dubai</h4>
+                    <p style="
+                    color: #a5ceee;
+                    padding-top: 10px;">Opening Hours 9am – 5pm</p>
+                    <p style="
+                    color: #a5ceee;
+                    padding-top: 10px;">Office: 050 2730973</p>
+                    <p style="
+                    color: #a5ceee;
+                    padding-top: 10px;">poshpawsdubai@yahoo.co.uk</p>
                </div>
             </div>
         </div>
     </section>
+
+
     <!-- Footer -->
     <footer class="container-fluid display-none">
         <div class="container">
