--- a/about-cattery.html
+++ b/about-cattery.html
@@ -156,7 +156,7 @@ Long term stay - please enquire for rates.</p>
             <div class="col-md-6 col-xs-12" style="padding-bottom: 20px;">
                    <h1>Contact Info</h1>
                     <img src="img/3points.svg" style="width:50px">
-                    <h4>PO Box 6273 Ajman</h4>
+                    <h4>PO Box 6273 Helio, Ajman</h4>
                     <p>Opening Hours 9am – 5pm</p>
                     <p>Office: 050 2730973</p>
                     <p>poshpawsdubai@yahoo.co.uk</p>
