--- a/about-grooming.html
+++ b/about-grooming.html
@@ -152,7 +152,7 @@
                <div class="col-md-6 col-xs-12">
                    <h1>Contact Info</h1>
                     <img src="img/3points.svg" style="width:50px">
-                    <h4>Warehouse no2 & 3 Street 37 Dubai</h4>
+                    <h4>DIP 1. Warehouse no2 & 3 Street 37 Dubai</h4>
                     <p>Opening Hours 9am – 5pm</p>
                     <p>Office: 050 2730973</p>
                     <p>poshpawsdubai@yahoo.co.uk</p>
