--- a/about.html
+++ b/about.html
@@ -167,8 +167,8 @@ None of my staff are employed for their looks or language skills!, but for their
                </div>
                <div class="col-md-6 col-xs-12">
                    <h1>Contact Info</h1>
-                    <img src="img/3points.svg" class="points3">
-                    <h4>Warehouse no2 & 3 Street 37 Dubai</h4>
+                    <img src="img/3points.svg" class="points3">        
+                    <h4>DIP 1. Warehouse no2 & 3 Street 37 Dubai</h4>
                     <p>Opening Hours 9am – 5pm</p>
                     <p>Office: 050 2730973</p>
                     <p>poshpawsdubai@yahoo.co.uk</p>
